--- a/index.html
+++ b/index.html
@@ -1,36 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Article preview component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style-mobile.css">
+    <script src="https://kit.fontawesome.com/6d642dc6ea.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style-desktop.css">
 </head>
 <body>
-
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <main class="container__main">
+        <section class="container__img">
+            <img src="images/drawers.jpg" alt="Imagen principal" class="img">
+        </section>
+        <section class="container__content">
+            <div class="container__title__paragraph">
+                <h1 class="title">Shift the overall look and feel by adding these wonderful touches to furniture in your home</h1>
+                <p class="paragraph">Ever been in a room and felt like something was missing? Perhaps it feit slightly bare and uninviting. I've got some simple tips to help you make any room feel complete.</p>
+            </div>
+            <div class="container__footer">
+                <img src="images/avatar-michelle.jpg" alt="Foto de perfil" class="img__perfil">
+                <div class="container__name__date">
+                    <h2 class="name">Michelle Appleton</h2>
+                    <h3 class="date">28 Jun 2020</h3>
+                </div>
+                <i class="icono__arrow fa-solid fa-share"></i>
+            </div>
+            <div class="container__none">
+                <div class="container__footer__redes">
+                    <ul class="social__net">
+                        <li class="net net__share">share</li>
+                        <li class="net"><img class="social" src="images/icon-facebook.svg" alt="Facebook"></li>
+                        <li class="net"><img class="social" src="images/icon-twitter.svg" alt="Twitter"></li>
+                        <li class="net"><img class="social" src="images/icon-pinterest.svg" alt="Pinterest"></li>
+                    </ul>
+                    <i class="icono__arrow__dark fa-solid fa-share"></i>
+                    <i class="arrow__bottom fa-solid fa-caret-up"></i>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="main.js"></script>
 </body>
 </html>
