--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li class="net"><img class="social" src="images/icon-pinterest.svg" alt="Pinterest"></li>
                     </ul>
                     <i class="icono__arrow__dark fa-solid fa-share"></i>
-                    <i class="arrow__bottom fa-solid fa-caret-up"></i>
+                    <i id="mobile__none" class="arrow__bottom fa-solid fa-caret-up"></i>
                 </div>
             </div>
         </section>
